--- a/app/src/main/res/layout/icon_layout.xml
+++ b/app/src/main/res/layout/icon_layout.xml
@@ -10,7 +10,6 @@
         android:layout_height="100dp"
         app:cardCornerRadius="6dp"
         app:cardElevation="6dp"
-        android:padding="6dp"
         android:layout_margin="4dp">
 
         <RelativeLayout
@@ -18,6 +17,7 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:layout_margin="6dp"
                 android:scaleType="fitCenter"
                 android:id="@+id/icon_image"
                 android:layout_width="match_parent"
