--- a/app/src/main/res/layout/iconset_layout.xml
+++ b/app/src/main/res/layout/iconset_layout.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/main_card"
         android:layout_centerInParent="true"
         android:layout_width="212dp"
         android:layout_height="240dp"
@@ -29,7 +30,6 @@
                     android:layout_height="100dp">
 
                     <ImageView
-                        android:padding="10dp"
                         android:id="@+id/icon_image_1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -37,9 +37,11 @@
                         android:layout_marginTop="6dp"
                         android:layout_marginEnd="6dp"
                         android:layout_marginBottom="6dp"
+                        android:padding="10dp"
                         android:scaleType="fitCenter" />
 
                     <ImageView
+                        android:visibility="gone"
                         android:id="@+id/prime_star_1"
                         android:layout_width="14dp"
                         android:layout_height="14dp"
@@ -55,7 +57,6 @@
                     android:layout_height="100dp">
 
                     <ImageView
-                        android:padding="10dp"
                         android:id="@+id/icon_image_2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -63,9 +64,11 @@
                         android:layout_marginTop="6dp"
                         android:layout_marginEnd="6dp"
                         android:layout_marginBottom="6dp"
+                        android:padding="10dp"
                         android:scaleType="fitCenter" />
 
                     <ImageView
+                        android:visibility="gone"
                         android:layout_alignParentRight="true"
                         android:src="@drawable/ic_baseline_stars_24"
                         android:id="@+id/prime_star_2"
@@ -81,7 +84,6 @@
                     android:layout_height="100dp">
 
                     <ImageView
-                        android:padding="10dp"
                         android:id="@+id/icon_image_3"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -89,9 +91,11 @@
                         android:layout_marginTop="6dp"
                         android:layout_marginEnd="6dp"
                         android:layout_marginBottom="6dp"
+                        android:padding="10dp"
                         android:scaleType="fitCenter" />
 
                     <ImageView
+                        android:visibility="gone"
                         android:layout_alignParentRight="true"
                         android:src="@drawable/ic_baseline_stars_24"
                         android:id="@+id/prime_star_3"
@@ -107,7 +111,6 @@
                     android:layout_height="100dp">
 
                     <ImageView
-                        android:padding="10dp"
                         android:id="@+id/icon_image_4"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -115,9 +118,11 @@
                         android:layout_marginTop="6dp"
                         android:layout_marginEnd="6dp"
                         android:layout_marginBottom="6dp"
+                        android:padding="10dp"
                         android:scaleType="fitCenter" />
 
                     <ImageView
+                        android:visibility="gone"
                         android:layout_alignParentRight="true"
                         android:src="@drawable/ic_baseline_stars_24"
                         android:id="@+id/prime_star_4"
