--- a/app/src/main/res/layout/icon_layout.xml
+++ b/app/src/main/res/layout/icon_layout.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/main_card"
         android:layout_centerInParent="true"
         android:layout_width="100dp"
         android:layout_height="100dp"
