--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.Dashboard">
 
     <RelativeLayout
@@ -47,14 +48,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <ProgressBar
-        android:indeterminateTintMode="src_atop"
-        android:indeterminateTint="@color/black"
+    <androidx.cardview.widget.CardView
         android:visibility="gone"
-        android:id="@+id/progress"
+        android:layout_marginBottom="16dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:id="@+id/progress"
+        app:cardElevation="6dp"
+        app:cardCornerRadius="50dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+        <ProgressBar
+            android:indeterminateTintMode="src_atop"
+            android:indeterminateTint="@color/black"
+            android:layout_margin="6dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"/>
+
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
