--- a/app/src/main/res/layout/bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bottomsheet_back"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/bottom_sheet_back"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/head_bar"
@@ -36,11 +36,11 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_margin="6dp"
-                android:scaleType="fitCenter"
                 android:id="@+id/icon_image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_margin="16dp"
+                android:scaleType="fitCenter" />
 
             <ImageView
                 android:visibility="gone"
@@ -56,16 +56,16 @@
 
     <TextView
         android:id="@+id/icon_name"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/main_card"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        android:text="Some Icon"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/main_card"
+        android:layout_centerHorizontal="true"
+        android:text="Some Icon"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
 
     <Button
-        android:background="@drawable/button_background"
+        android:id="@+id/download_btn"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_below="@+id/icon_name"
@@ -73,7 +73,21 @@
         android:layout_marginTop="16dp"
         android:layout_marginRight="36dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/button_background"
         android:text="Download"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        android:textColor="@color/white" />
+
+    <ProgressBar
+        android:visibility="gone"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/black"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/icon_name"
+        android:id="@+id/progress"
+        android:layout_width="44dp"
+        android:layout_height="44dp"/>
 
 </RelativeLayout>
