--- a/app/src/main/res/layout/iconset_layout.xml
+++ b/app/src/main/res/layout/iconset_layout.xml
@@ -6,128 +6,116 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/main_card"
+        android:layout_width="192dp"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_width="212dp"
-        android:layout_height="240dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         app:cardCornerRadius="6dp"
-        app:cardElevation="6dp"
-        android:layout_margin="4dp">
+        app:cardElevation="3dp">
 
         <RelativeLayout
-            android:layout_margin="6dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:id="@+id/icon_layout"
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:layout_height="wrap_content">
 
                 <RelativeLayout
-                    android:layout_alignParentTop="true"
+                    android:id="@+id/layout_1"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
                     android:layout_alignParentLeft="true"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp">
+                    android:layout_alignParentTop="true">
 
                     <ImageView
                         android:id="@+id/icon_image_1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="6dp"
-                        android:layout_marginTop="6dp"
-                        android:layout_marginEnd="6dp"
-                        android:layout_marginBottom="6dp"
-                        android:padding="10dp"
+                        android:padding="16dp"
                         android:scaleType="fitCenter" />
 
                     <ImageView
-                        android:visibility="gone"
                         android:id="@+id/prime_star_1"
                         android:layout_width="14dp"
                         android:layout_height="14dp"
                         android:layout_alignParentRight="true"
-                        android:src="@drawable/ic_baseline_stars_24" />
+                        android:src="@drawable/ic_baseline_stars_24"
+                        android:visibility="gone" />
 
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/layout_2"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp">
+                    android:layout_alignParentRight="true">
 
                     <ImageView
                         android:id="@+id/icon_image_2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="6dp"
-                        android:layout_marginTop="6dp"
-                        android:layout_marginEnd="6dp"
-                        android:layout_marginBottom="6dp"
-                        android:padding="10dp"
+                        android:padding="16dp"
                         android:scaleType="fitCenter" />
 
                     <ImageView
-                        android:visibility="gone"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/ic_baseline_stars_24"
                         android:id="@+id/prime_star_2"
                         android:layout_width="14dp"
-                        android:layout_height="14dp"/>
+                        android:layout_height="14dp"
+                        android:layout_alignParentRight="true"
+                        android:src="@drawable/ic_baseline_stars_24"
+                        android:visibility="gone" />
 
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp">
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
+                    android:layout_below="@+id/layout_1"
+                    android:layout_alignParentLeft="true">
 
                     <ImageView
                         android:id="@+id/icon_image_3"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="6dp"
-                        android:layout_marginTop="6dp"
-                        android:layout_marginEnd="6dp"
-                        android:layout_marginBottom="6dp"
-                        android:padding="10dp"
+                        android:padding="16dp"
                         android:scaleType="fitCenter" />
 
                     <ImageView
-                        android:visibility="gone"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/ic_baseline_stars_24"
                         android:id="@+id/prime_star_3"
                         android:layout_width="14dp"
-                        android:layout_height="14dp"/>
+                        android:layout_height="14dp"
+                        android:layout_alignParentRight="true"
+                        android:src="@drawable/ic_baseline_stars_24"
+                        android:visibility="gone" />
 
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp">
+                    android:layout_below="@id/layout_2"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
+                    android:layout_alignParentRight="true">
 
                     <ImageView
                         android:id="@+id/icon_image_4"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="6dp"
-                        android:layout_marginTop="6dp"
-                        android:layout_marginEnd="6dp"
-                        android:layout_marginBottom="6dp"
-                        android:padding="10dp"
+                        android:padding="16dp"
                         android:scaleType="fitCenter" />
 
                     <ImageView
-                        android:visibility="gone"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/ic_baseline_stars_24"
                         android:id="@+id/prime_star_4"
                         android:layout_width="14dp"
-                        android:layout_height="14dp"/>
+                        android:layout_height="14dp"
+                        android:layout_alignParentRight="true"
+                        android:src="@drawable/ic_baseline_stars_24"
+                        android:visibility="gone" />
 
                 </RelativeLayout>
 
@@ -135,16 +123,17 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_below="@+id/icon_layout"
+                android:layout_margin="6dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/icon_layout">
 
                 <TextView
+                    android:layout_marginLeft="10dp"
                     android:id="@+id/iconset_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_marginLeft="10dp"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:text="My Icon Set id no wand to my"
